// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exit codes bindings > constants stay aligned with catalog snapshot 1`] = `
{
  "EXIT_ALERT_SYSTEM_FAILED": 83,
  "EXIT_AUTHENTICATION_FAILED": 70,
  "EXIT_AUTHORIZATION_FAILED": 71,
  "EXIT_CERTIFICATE_INVALID": 73,
  "EXIT_CONFIG_FILE_NOT_FOUND": 23,
  "EXIT_CONFIG_INVALID": 20,
  "EXIT_CONNECTION_REFUSED": 14,
  "EXIT_CONNECTION_TIMEOUT": 15,
  "EXIT_COVERAGE_THRESHOLD_NOT_MET": 96,
  "EXIT_DATABASE_UNAVAILABLE": 31,
  "EXIT_DATA_CORRUPT": 63,
  "EXIT_DATA_INVALID": 60,
  "EXIT_DIRECTORY_NOT_FOUND": 52,
  "EXIT_ENVIRONMENT_INVALID": 24,
  "EXIT_EXTERNAL_SERVICE_UNAVAILABLE": 32,
  "EXIT_FAILURE": 1,
  "EXIT_FILE_NOT_FOUND": 51,
  "EXIT_FILE_READ_ERROR": 53,
  "EXIT_FILE_WRITE_ERROR": 54,
  "EXIT_HEALTH_CHECK_FAILED": 30,
  "EXIT_INSTANCE_ALREADY_RUNNING": 12,
  "EXIT_INVALID_ARGUMENT": 40,
  "EXIT_LOGGING_FAILED": 82,
  "EXIT_METRICS_UNAVAILABLE": 80,
  "EXIT_MISSING_DEPENDENCY": 21,
  "EXIT_MISSING_REQUIRED_ARGUMENT": 41,
  "EXIT_NETWORK_UNREACHABLE": 13,
  "EXIT_OPERATION_TIMEOUT": 34,
  "EXIT_PARSE_ERROR": 61,
  "EXIT_PERMISSION_DENIED": 50,
  "EXIT_PORT_IN_USE": 10,
  "EXIT_PORT_RANGE_EXHAUSTED": 11,
  "EXIT_RESOURCE_EXHAUSTED": 33,
  "EXIT_SECURITY_VIOLATION": 72,
  "EXIT_SIGNAL_ALRM": 142,
  "EXIT_SIGNAL_HUP": 129,
  "EXIT_SIGNAL_INT": 130,
  "EXIT_SIGNAL_KILL": 137,
  "EXIT_SIGNAL_PIPE": 141,
  "EXIT_SIGNAL_QUIT": 131,
  "EXIT_SIGNAL_TERM": 143,
  "EXIT_SIGNAL_USR1": 159,
  "EXIT_SIGNAL_USR2": 160,
  "EXIT_SSOT_VERSION_MISMATCH": 22,
  "EXIT_STRUCTURED_LOGGING_FAILED": 84,
  "EXIT_SUCCESS": 0,
  "EXIT_TEST_ERROR": 92,
  "EXIT_TEST_FAILURE": 91,
  "EXIT_TEST_INTERRUPTED": 93,
  "EXIT_TEST_NO_TESTS_COLLECTED": 95,
  "EXIT_TEST_USAGE_ERROR": 94,
  "EXIT_TRACING_FAILED": 81,
  "EXIT_TRANSFORMATION_FAILED": 62,
  "EXIT_USAGE": 64,
}
`;

exports[`exit codes bindings > metadata stays aligned with catalog snapshot 1`] = `
{
  "0": {
    "category": "standard",
    "code": 0,
    "context": "Command completed without errors",
    "description": "Successful execution",
    "name": "EXIT_SUCCESS",
  },
  "1": {
    "category": "standard",
    "code": 1,
    "context": "Use when no more specific exit code applies",
    "description": "Generic failure (unspecified error)",
    "name": "EXIT_FAILURE",
  },
  "10": {
    "category": "networking",
    "code": 10,
    "context": "Server startup when port unavailable and fail_if_unavailable strategy",
    "description": "Specified port is already in use",
    "name": "EXIT_PORT_IN_USE",
  },
  "11": {
    "category": "networking",
    "code": 11,
    "context": "Server startup when all ports in environment range occupied",
    "description": "No available ports in configured range",
    "name": "EXIT_PORT_RANGE_EXHAUSTED",
  },
  "12": {
    "category": "networking",
    "code": 12,
    "context": "Server startup when PID registry shows active process on port",
    "description": "Another instance already running on target port",
    "name": "EXIT_INSTANCE_ALREADY_RUNNING",
  },
  "129": {
    "bsdEquivalent": "128 + 1",
    "category": "signals",
    "code": 129,
    "context": "Terminal disconnected, config reload requested",
    "description": "Hangup signal (SIGHUP)",
    "name": "EXIT_SIGNAL_HUP",
  },
  "13": {
    "category": "networking",
    "code": 13,
    "context": "Client connections, health checks, external service validation",
    "description": "Network destination unreachable",
    "name": "EXIT_NETWORK_UNREACHABLE",
  },
  "130": {
    "bsdEquivalent": "128 + 2",
    "category": "signals",
    "code": 130,
    "context": "Ctrl+C pressed, user interrupt",
    "description": "Interrupt signal (SIGINT)",
    "name": "EXIT_SIGNAL_INT",
  },
  "131": {
    "bsdEquivalent": "128 + 3",
    "category": "signals",
    "code": 131,
    "context": "Ctrl+\\\\ pressed, core dump requested",
    "description": "Quit signal (SIGQUIT)",
    "name": "EXIT_SIGNAL_QUIT",
  },
  "137": {
    "bsdEquivalent": "128 + 9",
    "category": "signals",
    "code": 137,
    "context": "Forceful termination, non-graceful shutdown (not catchable)",
    "description": "Kill signal (SIGKILL)",
    "name": "EXIT_SIGNAL_KILL",
    "pythonNote": "Cannot be caught in Python (OS-level)",
  },
  "14": {
    "category": "networking",
    "code": 14,
    "context": "Database connections, API endpoints, upstream services",
    "description": "Connection refused by remote host",
    "name": "EXIT_CONNECTION_REFUSED",
  },
  "141": {
    "bsdEquivalent": "128 + 13",
    "category": "signals",
    "code": 141,
    "context": "Writing to closed pipe/socket, reader terminated",
    "description": "Broken pipe (SIGPIPE)",
    "name": "EXIT_SIGNAL_PIPE",
    "pythonNote": "Raised as BrokenPipeError exception",
  },
  "142": {
    "bsdEquivalent": "128 + 14",
    "category": "signals",
    "code": 142,
    "context": "Timer expiration, alarm clock",
    "description": "Alarm signal (SIGALRM)",
    "name": "EXIT_SIGNAL_ALRM",
    "pythonNote": "Supported by signal module, rarely used in practice",
  },
  "143": {
    "bsdEquivalent": "128 + 15",
    "category": "signals",
    "code": 143,
    "context": "Graceful shutdown requested, normal termination",
    "description": "Termination signal (SIGTERM)",
    "name": "EXIT_SIGNAL_TERM",
    "pythonNote": "Default signal for graceful shutdown",
  },
  "15": {
    "category": "networking",
    "code": 15,
    "context": "Slow networks, unresponsive services, firewall blocks",
    "description": "Connection attempt timed out",
    "name": "EXIT_CONNECTION_TIMEOUT",
  },
  "159": {
    "bsdEquivalent": "128 + 31",
    "category": "signals",
    "code": 159,
    "context": "Application-specific signal handling (e.g., reopen logs, dump stats)",
    "description": "User-defined signal 1 (SIGUSR1)",
    "name": "EXIT_SIGNAL_USR1",
  },
  "160": {
    "bsdEquivalent": "128 + 32",
    "category": "signals",
    "code": 160,
    "context": "Application-specific signal handling (e.g., toggle debug mode)",
    "description": "User-defined signal 2 (SIGUSR2)",
    "name": "EXIT_SIGNAL_USR2",
  },
  "20": {
    "category": "configuration",
    "code": 20,
    "context": "Startup validation, schema mismatches, invalid YAML/JSON",
    "description": "Configuration file failed validation",
    "name": "EXIT_CONFIG_INVALID",
    "retryHint": "no_retry",
  },
  "21": {
    "category": "configuration",
    "code": 21,
    "context": "Missing binaries, libraries, or runtime requirements",
    "description": "Required dependency not found",
    "name": "EXIT_MISSING_DEPENDENCY",
    "retryHint": "investigate",
  },
  "22": {
    "category": "configuration",
    "code": 22,
    "context": "Helper library detects unsupported Crucible version",
    "description": "SSOT (Crucible) version incompatible",
    "name": "EXIT_SSOT_VERSION_MISMATCH",
    "retryHint": "no_retry",
  },
  "23": {
    "category": "configuration",
    "code": 23,
    "context": "Explicitly specified config path doesn't exist",
    "description": "Required configuration file not found",
    "name": "EXIT_CONFIG_FILE_NOT_FOUND",
  },
  "24": {
    "category": "configuration",
    "code": 24,
    "context": "Unknown environment name, missing environment config",
    "description": "Invalid or unsupported environment specification",
    "name": "EXIT_ENVIRONMENT_INVALID",
  },
  "30": {
    "category": "runtime",
    "code": 30,
    "context": "Startup health validation, readiness probes",
    "description": "Health check endpoint returned non-healthy status",
    "name": "EXIT_HEALTH_CHECK_FAILED",
    "retryHint": "retry",
  },
  "31": {
    "category": "runtime",
    "code": 31,
    "context": "Startup connection checks, critical query failures",
    "description": "Database connection failed or unavailable",
    "name": "EXIT_DATABASE_UNAVAILABLE",
    "retryHint": "retry",
  },
  "32": {
    "category": "runtime",
    "code": 32,
    "context": "API dependencies, message queues, cache servers",
    "description": "Required external service unavailable",
    "name": "EXIT_EXTERNAL_SERVICE_UNAVAILABLE",
  },
  "33": {
    "category": "runtime",
    "code": 33,
    "context": "Out-of-memory, disk full, too many open files",
    "description": "System resources exhausted (memory, disk, file descriptors)",
    "name": "EXIT_RESOURCE_EXHAUSTED",
    "retryHint": "investigate",
  },
  "34": {
    "category": "runtime",
    "code": 34,
    "context": "Long-running tasks, async operations, batch processing",
    "description": "Operation exceeded timeout threshold",
    "name": "EXIT_OPERATION_TIMEOUT",
    "retryHint": "retry",
  },
  "40": {
    "category": "usage",
    "code": 40,
    "context": "Type errors, out-of-range values, malformed input",
    "description": "Invalid command-line argument or flag value",
    "name": "EXIT_INVALID_ARGUMENT",
  },
  "41": {
    "category": "usage",
    "code": 41,
    "context": "Missing --config, --port, or other required flags",
    "description": "Required command-line argument not provided",
    "name": "EXIT_MISSING_REQUIRED_ARGUMENT",
  },
  "50": {
    "category": "permissions",
    "code": 50,
    "context": "File access, port binding (<1024), privileged operations",
    "description": "Insufficient permissions for operation",
    "name": "EXIT_PERMISSION_DENIED",
  },
  "51": {
    "category": "permissions",
    "code": 51,
    "context": "Assets, templates, data files (not config - use 23)",
    "description": "Required file not found",
    "name": "EXIT_FILE_NOT_FOUND",
  },
  "52": {
    "category": "permissions",
    "code": 52,
    "context": "State directories, log paths, data directories",
    "description": "Required directory not found",
    "name": "EXIT_DIRECTORY_NOT_FOUND",
  },
  "53": {
    "category": "permissions",
    "code": 53,
    "context": "Corrupt files, I/O errors, encoding issues",
    "description": "Error reading file",
    "name": "EXIT_FILE_READ_ERROR",
  },
  "54": {
    "category": "permissions",
    "code": 54,
    "context": "Disk full, read-only filesystem, permission errors",
    "description": "Error writing file",
    "name": "EXIT_FILE_WRITE_ERROR",
  },
  "60": {
    "category": "data",
    "code": 60,
    "context": "Schema validation, business rule violations",
    "description": "Input data failed validation",
    "name": "EXIT_DATA_INVALID",
  },
  "61": {
    "category": "data",
    "code": 61,
    "context": "Malformed JSON/YAML/XML, syntax errors",
    "description": "Error parsing input data",
    "name": "EXIT_PARSE_ERROR",
  },
  "62": {
    "category": "data",
    "code": 62,
    "context": "Type conversions, format transformations, encoding changes",
    "description": "Data transformation or conversion failed",
    "name": "EXIT_TRANSFORMATION_FAILED",
  },
  "63": {
    "category": "data",
    "code": 63,
    "context": "Checksum failures, integrity violations",
    "description": "Data corruption detected",
    "name": "EXIT_DATA_CORRUPT",
  },
  "64": {
    "bsdEquivalent": "EX_USAGE",
    "category": "usage",
    "code": 64,
    "context": "BSD sysexits.h EX_USAGE - wrong number of arguments, bad syntax",
    "description": "Command-line usage error",
    "name": "EXIT_USAGE",
  },
  "70": {
    "category": "security",
    "code": 70,
    "context": "Invalid credentials, expired tokens, auth service unavailable",
    "description": "Authentication failed",
    "name": "EXIT_AUTHENTICATION_FAILED",
  },
  "71": {
    "category": "security",
    "code": 71,
    "context": "RBAC failures, scope violations, resource access denied",
    "description": "Authorization failed (authenticated but insufficient permissions)",
    "name": "EXIT_AUTHORIZATION_FAILED",
  },
  "72": {
    "category": "security",
    "code": 72,
    "context": "Suspicious activity, rate limit exceeded, IP blocklist",
    "description": "Security policy violation detected",
    "name": "EXIT_SECURITY_VIOLATION",
  },
  "73": {
    "bsdEquivalent": "EX_PROTOCOL",
    "category": "security",
    "code": 73,
    "context": "Expired certs, untrusted CAs, hostname mismatches",
    "description": "TLS/SSL certificate validation failed",
    "name": "EXIT_CERTIFICATE_INVALID",
  },
  "80": {
    "category": "observability",
    "code": 80,
    "context": "Use for observability-focused tools (Prometheus exporters, StatsD agents).
Workhorses SHOULD log warning and continue unless configured to fail-fast.
",
    "description": "Metrics endpoint or collection system unavailable",
    "name": "EXIT_METRICS_UNAVAILABLE",
  },
  "81": {
    "category": "observability",
    "code": 81,
    "context": "OTLP exporter failed, Jaeger collector unreachable",
    "description": "Distributed tracing system unavailable",
    "name": "EXIT_TRACING_FAILED",
  },
  "82": {
    "category": "observability",
    "code": 82,
    "context": "Log aggregator unreachable, log file unwritable",
    "description": "Logging system unavailable or misconfigured",
    "name": "EXIT_LOGGING_FAILED",
  },
  "83": {
    "category": "observability",
    "code": 83,
    "context": "PagerDuty API failed, Slack webhook unreachable",
    "description": "Alerting system unavailable",
    "name": "EXIT_ALERT_SYSTEM_FAILED",
  },
  "84": {
    "category": "observability",
    "code": 84,
    "context": "JSON log aggregator unreachable, log schema validation failed",
    "description": "Structured logging system unavailable",
    "name": "EXIT_STRUCTURED_LOGGING_FAILED",
  },
  "91": {
    "category": "testing",
    "code": 91,
    "context": "Test assertions failed, expected behavior not met.
Maps to pytest exit code 1, Go test failure, Jest failure.
",
    "description": "One or more tests failed",
    "name": "EXIT_TEST_FAILURE",
  },
  "92": {
    "category": "testing",
    "code": 92,
    "context": "Test setup failed, fixture unavailable, test harness error.
Maps to pytest exit code 3 (internal error).
",
    "description": "Test execution error (not test failure)",
    "name": "EXIT_TEST_ERROR",
  },
  "93": {
    "category": "testing",
    "code": 93,
    "context": "Ctrl+C during tests, system signal, user cancellation.
Maps to pytest exit code 2.
",
    "description": "Test run interrupted by user or system",
    "name": "EXIT_TEST_INTERRUPTED",
  },
  "94": {
    "category": "testing",
    "code": 94,
    "context": "Invalid test arguments, bad configuration.
Maps to pytest exit code 4.
",
    "description": "Test command usage error",
    "name": "EXIT_TEST_USAGE_ERROR",
  },
  "95": {
    "category": "testing",
    "code": 95,
    "context": "Empty test suite, all tests deselected or skipped.
Maps to pytest exit code 5.
",
    "description": "No tests found or all tests skipped",
    "name": "EXIT_TEST_NO_TESTS_COLLECTED",
  },
  "96": {
    "category": "testing",
    "code": 96,
    "context": "Code coverage validation, quality gate failure",
    "description": "Test coverage below required threshold",
    "name": "EXIT_COVERAGE_THRESHOLD_NOT_MET",
  },
}
`;

exports[`exit codes bindings constants stay aligned with catalog snapshot 1`] = `
{
  "EXIT_ALERT_SYSTEM_FAILED": 83,
  "EXIT_AUTHENTICATION_FAILED": 70,
  "EXIT_AUTHORIZATION_FAILED": 71,
  "EXIT_CERTIFICATE_INVALID": 73,
  "EXIT_CONFIG_FILE_NOT_FOUND": 23,
  "EXIT_CONFIG_INVALID": 20,
  "EXIT_CONNECTION_REFUSED": 14,
  "EXIT_CONNECTION_TIMEOUT": 15,
  "EXIT_COVERAGE_THRESHOLD_NOT_MET": 96,
  "EXIT_DATABASE_UNAVAILABLE": 31,
  "EXIT_DATA_CORRUPT": 63,
  "EXIT_DATA_INVALID": 60,
  "EXIT_DIRECTORY_NOT_FOUND": 52,
  "EXIT_ENVIRONMENT_INVALID": 24,
  "EXIT_EXTERNAL_SERVICE_UNAVAILABLE": 32,
  "EXIT_FAILURE": 1,
  "EXIT_FILE_NOT_FOUND": 51,
  "EXIT_FILE_READ_ERROR": 53,
  "EXIT_FILE_WRITE_ERROR": 54,
  "EXIT_HEALTH_CHECK_FAILED": 30,
  "EXIT_INSTANCE_ALREADY_RUNNING": 12,
  "EXIT_INVALID_ARGUMENT": 40,
  "EXIT_LOGGING_FAILED": 82,
  "EXIT_METRICS_UNAVAILABLE": 80,
  "EXIT_MISSING_DEPENDENCY": 21,
  "EXIT_MISSING_REQUIRED_ARGUMENT": 41,
  "EXIT_NETWORK_UNREACHABLE": 13,
  "EXIT_OPERATION_TIMEOUT": 34,
  "EXIT_PARSE_ERROR": 61,
  "EXIT_PERMISSION_DENIED": 50,
  "EXIT_PORT_IN_USE": 10,
  "EXIT_PORT_RANGE_EXHAUSTED": 11,
  "EXIT_RESOURCE_EXHAUSTED": 33,
  "EXIT_SECURITY_VIOLATION": 72,
  "EXIT_SIGNAL_ALRM": 142,
  "EXIT_SIGNAL_HUP": 129,
  "EXIT_SIGNAL_INT": 130,
  "EXIT_SIGNAL_KILL": 137,
  "EXIT_SIGNAL_PIPE": 141,
  "EXIT_SIGNAL_QUIT": 131,
  "EXIT_SIGNAL_TERM": 143,
  "EXIT_SIGNAL_USR1": 159,
  "EXIT_SIGNAL_USR2": 160,
  "EXIT_SSOT_VERSION_MISMATCH": 22,
  "EXIT_STRUCTURED_LOGGING_FAILED": 84,
  "EXIT_SUCCESS": 0,
  "EXIT_TEST_ERROR": 92,
  "EXIT_TEST_FAILURE": 91,
  "EXIT_TEST_INTERRUPTED": 93,
  "EXIT_TEST_NO_TESTS_COLLECTED": 95,
  "EXIT_TEST_USAGE_ERROR": 94,
  "EXIT_TRACING_FAILED": 81,
  "EXIT_TRANSFORMATION_FAILED": 62,
  "EXIT_USAGE": 64,
}
`;

exports[`exit codes bindings metadata stays aligned with catalog snapshot 1`] = `
{
  "0": {
    "category": "standard",
    "code": 0,
    "context": "Command completed without errors",
    "description": "Successful execution",
    "name": "EXIT_SUCCESS",
  },
  "1": {
    "category": "standard",
    "code": 1,
    "context": "Use when no more specific exit code applies",
    "description": "Generic failure (unspecified error)",
    "name": "EXIT_FAILURE",
  },
  "10": {
    "category": "networking",
    "code": 10,
    "context": "Server startup when port unavailable and fail_if_unavailable strategy",
    "description": "Specified port is already in use",
    "name": "EXIT_PORT_IN_USE",
  },
  "11": {
    "category": "networking",
    "code": 11,
    "context": "Server startup when all ports in environment range occupied",
    "description": "No available ports in configured range",
    "name": "EXIT_PORT_RANGE_EXHAUSTED",
  },
  "12": {
    "category": "networking",
    "code": 12,
    "context": "Server startup when PID registry shows active process on port",
    "description": "Another instance already running on target port",
    "name": "EXIT_INSTANCE_ALREADY_RUNNING",
  },
  "129": {
    "bsdEquivalent": "128 + 1",
    "category": "signals",
    "code": 129,
    "context": "Terminal disconnected, config reload requested",
    "description": "Hangup signal (SIGHUP)",
    "name": "EXIT_SIGNAL_HUP",
  },
  "13": {
    "category": "networking",
    "code": 13,
    "context": "Client connections, health checks, external service validation",
    "description": "Network destination unreachable",
    "name": "EXIT_NETWORK_UNREACHABLE",
  },
  "130": {
    "bsdEquivalent": "128 + 2",
    "category": "signals",
    "code": 130,
    "context": "Ctrl+C pressed, user interrupt",
    "description": "Interrupt signal (SIGINT)",
    "name": "EXIT_SIGNAL_INT",
  },
  "131": {
    "bsdEquivalent": "128 + 3",
    "category": "signals",
    "code": 131,
    "context": "Ctrl+\\\\ pressed, core dump requested",
    "description": "Quit signal (SIGQUIT)",
    "name": "EXIT_SIGNAL_QUIT",
  },
  "137": {
    "bsdEquivalent": "128 + 9",
    "category": "signals",
    "code": 137,
    "context": "Forceful termination, non-graceful shutdown (not catchable)",
    "description": "Kill signal (SIGKILL)",
    "name": "EXIT_SIGNAL_KILL",
    "pythonNote": "Cannot be caught in Python (OS-level)",
  },
  "14": {
    "category": "networking",
    "code": 14,
    "context": "Database connections, API endpoints, upstream services",
    "description": "Connection refused by remote host",
    "name": "EXIT_CONNECTION_REFUSED",
  },
  "141": {
    "bsdEquivalent": "128 + 13",
    "category": "signals",
    "code": 141,
    "context": "Writing to closed pipe/socket, reader terminated",
    "description": "Broken pipe (SIGPIPE)",
    "name": "EXIT_SIGNAL_PIPE",
    "pythonNote": "Raised as BrokenPipeError exception",
  },
  "142": {
    "bsdEquivalent": "128 + 14",
    "category": "signals",
    "code": 142,
    "context": "Timer expiration, alarm clock",
    "description": "Alarm signal (SIGALRM)",
    "name": "EXIT_SIGNAL_ALRM",
    "pythonNote": "Supported by signal module, rarely used in practice",
  },
  "143": {
    "bsdEquivalent": "128 + 15",
    "category": "signals",
    "code": 143,
    "context": "Graceful shutdown requested, normal termination",
    "description": "Termination signal (SIGTERM)",
    "name": "EXIT_SIGNAL_TERM",
    "pythonNote": "Default signal for graceful shutdown",
  },
  "15": {
    "category": "networking",
    "code": 15,
    "context": "Slow networks, unresponsive services, firewall blocks",
    "description": "Connection attempt timed out",
    "name": "EXIT_CONNECTION_TIMEOUT",
  },
  "159": {
    "bsdEquivalent": "128 + 31",
    "category": "signals",
    "code": 159,
    "context": "Application-specific signal handling (e.g., reopen logs, dump stats)",
    "description": "User-defined signal 1 (SIGUSR1)",
    "name": "EXIT_SIGNAL_USR1",
  },
  "160": {
    "bsdEquivalent": "128 + 32",
    "category": "signals",
    "code": 160,
    "context": "Application-specific signal handling (e.g., toggle debug mode)",
    "description": "User-defined signal 2 (SIGUSR2)",
    "name": "EXIT_SIGNAL_USR2",
  },
  "20": {
    "category": "configuration",
    "code": 20,
    "context": "Startup validation, schema mismatches, invalid YAML/JSON",
    "description": "Configuration file failed validation",
    "name": "EXIT_CONFIG_INVALID",
    "retryHint": "no_retry",
  },
  "21": {
    "category": "configuration",
    "code": 21,
    "context": "Missing binaries, libraries, or runtime requirements",
    "description": "Required dependency not found",
    "name": "EXIT_MISSING_DEPENDENCY",
    "retryHint": "investigate",
  },
  "22": {
    "category": "configuration",
    "code": 22,
    "context": "Helper library detects unsupported Crucible version",
    "description": "SSOT (Crucible) version incompatible",
    "name": "EXIT_SSOT_VERSION_MISMATCH",
    "retryHint": "no_retry",
  },
  "23": {
    "category": "configuration",
    "code": 23,
    "context": "Explicitly specified config path doesn't exist",
    "description": "Required configuration file not found",
    "name": "EXIT_CONFIG_FILE_NOT_FOUND",
  },
  "24": {
    "category": "configuration",
    "code": 24,
    "context": "Unknown environment name, missing environment config",
    "description": "Invalid or unsupported environment specification",
    "name": "EXIT_ENVIRONMENT_INVALID",
  },
  "30": {
    "category": "runtime",
    "code": 30,
    "context": "Startup health validation, readiness probes",
    "description": "Health check endpoint returned non-healthy status",
    "name": "EXIT_HEALTH_CHECK_FAILED",
    "retryHint": "retry",
  },
  "31": {
    "category": "runtime",
    "code": 31,
    "context": "Startup connection checks, critical query failures",
    "description": "Database connection failed or unavailable",
    "name": "EXIT_DATABASE_UNAVAILABLE",
    "retryHint": "retry",
  },
  "32": {
    "category": "runtime",
    "code": 32,
    "context": "API dependencies, message queues, cache servers",
    "description": "Required external service unavailable",
    "name": "EXIT_EXTERNAL_SERVICE_UNAVAILABLE",
  },
  "33": {
    "category": "runtime",
    "code": 33,
    "context": "Out-of-memory, disk full, too many open files",
    "description": "System resources exhausted (memory, disk, file descriptors)",
    "name": "EXIT_RESOURCE_EXHAUSTED",
    "retryHint": "investigate",
  },
  "34": {
    "category": "runtime",
    "code": 34,
    "context": "Long-running tasks, async operations, batch processing",
    "description": "Operation exceeded timeout threshold",
    "name": "EXIT_OPERATION_TIMEOUT",
    "retryHint": "retry",
  },
  "40": {
    "category": "usage",
    "code": 40,
    "context": "Type errors, out-of-range values, malformed input",
    "description": "Invalid command-line argument or flag value",
    "name": "EXIT_INVALID_ARGUMENT",
  },
  "41": {
    "category": "usage",
    "code": 41,
    "context": "Missing --config, --port, or other required flags",
    "description": "Required command-line argument not provided",
    "name": "EXIT_MISSING_REQUIRED_ARGUMENT",
  },
  "50": {
    "category": "permissions",
    "code": 50,
    "context": "File access, port binding (<1024), privileged operations",
    "description": "Insufficient permissions for operation",
    "name": "EXIT_PERMISSION_DENIED",
  },
  "51": {
    "category": "permissions",
    "code": 51,
    "context": "Assets, templates, data files (not config - use 23)",
    "description": "Required file not found",
    "name": "EXIT_FILE_NOT_FOUND",
  },
  "52": {
    "category": "permissions",
    "code": 52,
    "context": "State directories, log paths, data directories",
    "description": "Required directory not found",
    "name": "EXIT_DIRECTORY_NOT_FOUND",
  },
  "53": {
    "category": "permissions",
    "code": 53,
    "context": "Corrupt files, I/O errors, encoding issues",
    "description": "Error reading file",
    "name": "EXIT_FILE_READ_ERROR",
  },
  "54": {
    "category": "permissions",
    "code": 54,
    "context": "Disk full, read-only filesystem, permission errors",
    "description": "Error writing file",
    "name": "EXIT_FILE_WRITE_ERROR",
  },
  "60": {
    "category": "data",
    "code": 60,
    "context": "Schema validation, business rule violations",
    "description": "Input data failed validation",
    "name": "EXIT_DATA_INVALID",
  },
  "61": {
    "category": "data",
    "code": 61,
    "context": "Malformed JSON/YAML/XML, syntax errors",
    "description": "Error parsing input data",
    "name": "EXIT_PARSE_ERROR",
  },
  "62": {
    "category": "data",
    "code": 62,
    "context": "Type conversions, format transformations, encoding changes",
    "description": "Data transformation or conversion failed",
    "name": "EXIT_TRANSFORMATION_FAILED",
  },
  "63": {
    "category": "data",
    "code": 63,
    "context": "Checksum failures, integrity violations",
    "description": "Data corruption detected",
    "name": "EXIT_DATA_CORRUPT",
  },
  "64": {
    "bsdEquivalent": "EX_USAGE",
    "category": "usage",
    "code": 64,
    "context": "BSD sysexits.h EX_USAGE - wrong number of arguments, bad syntax",
    "description": "Command-line usage error",
    "name": "EXIT_USAGE",
  },
  "70": {
    "category": "security",
    "code": 70,
    "context": "Invalid credentials, expired tokens, auth service unavailable",
    "description": "Authentication failed",
    "name": "EXIT_AUTHENTICATION_FAILED",
  },
  "71": {
    "category": "security",
    "code": 71,
    "context": "RBAC failures, scope violations, resource access denied",
    "description": "Authorization failed (authenticated but insufficient permissions)",
    "name": "EXIT_AUTHORIZATION_FAILED",
  },
  "72": {
    "category": "security",
    "code": 72,
    "context": "Suspicious activity, rate limit exceeded, IP blocklist",
    "description": "Security policy violation detected",
    "name": "EXIT_SECURITY_VIOLATION",
  },
  "73": {
    "bsdEquivalent": "EX_PROTOCOL",
    "category": "security",
    "code": 73,
    "context": "Expired certs, untrusted CAs, hostname mismatches",
    "description": "TLS/SSL certificate validation failed",
    "name": "EXIT_CERTIFICATE_INVALID",
  },
  "80": {
    "category": "observability",
    "code": 80,
    "context": 
"Use for observability-focused tools (Prometheus exporters, StatsD agents).
Workhorses SHOULD log warning and continue unless configured to fail-fast.
"
,
    "description": "Metrics endpoint or collection system unavailable",
    "name": "EXIT_METRICS_UNAVAILABLE",
  },
  "81": {
    "category": "observability",
    "code": 81,
    "context": "OTLP exporter failed, Jaeger collector unreachable",
    "description": "Distributed tracing system unavailable",
    "name": "EXIT_TRACING_FAILED",
  },
  "82": {
    "category": "observability",
    "code": 82,
    "context": "Log aggregator unreachable, log file unwritable",
    "description": "Logging system unavailable or misconfigured",
    "name": "EXIT_LOGGING_FAILED",
  },
  "83": {
    "category": "observability",
    "code": 83,
    "context": "PagerDuty API failed, Slack webhook unreachable",
    "description": "Alerting system unavailable",
    "name": "EXIT_ALERT_SYSTEM_FAILED",
  },
  "84": {
    "category": "observability",
    "code": 84,
    "context": "JSON log aggregator unreachable, log schema validation failed",
    "description": "Structured logging system unavailable",
    "name": "EXIT_STRUCTURED_LOGGING_FAILED",
  },
  "91": {
    "category": "testing",
    "code": 91,
    "context": 
"Test assertions failed, expected behavior not met.
Maps to pytest exit code 1, Go test failure, Jest failure.
"
,
    "description": "One or more tests failed",
    "name": "EXIT_TEST_FAILURE",
  },
  "92": {
    "category": "testing",
    "code": 92,
    "context": 
"Test setup failed, fixture unavailable, test harness error.
Maps to pytest exit code 3 (internal error).
"
,
    "description": "Test execution error (not test failure)",
    "name": "EXIT_TEST_ERROR",
  },
  "93": {
    "category": "testing",
    "code": 93,
    "context": 
"Ctrl+C during tests, system signal, user cancellation.
Maps to pytest exit code 2.
"
,
    "description": "Test run interrupted by user or system",
    "name": "EXIT_TEST_INTERRUPTED",
  },
  "94": {
    "category": "testing",
    "code": 94,
    "context": 
"Invalid test arguments, bad configuration.
Maps to pytest exit code 4.
"
,
    "description": "Test command usage error",
    "name": "EXIT_TEST_USAGE_ERROR",
  },
  "95": {
    "category": "testing",
    "code": 95,
    "context": 
"Empty test suite, all tests deselected or skipped.
Maps to pytest exit code 5.
"
,
    "description": "No tests found or all tests skipped",
    "name": "EXIT_TEST_NO_TESTS_COLLECTED",
  },
  "96": {
    "category": "testing",
    "code": 96,
    "context": "Code coverage validation, quality gate failure",
    "description": "Test coverage below required threshold",
    "name": "EXIT_COVERAGE_THRESHOLD_NOT_MET",
  },
}
`;
